# GameTiger

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameTiger.uf2  LICENSE  README.md  g2048screen.cpp  g2048screen.h  logo.565  main.cpp  main.py  menuscreen.cpp  menuscreen.h  snakescreen.cpp  snakescreen.h  splashscreen.cpp  splashscreen.h
Case/: GameTigerButtonBoot.stl  GameTigerButtonPower.stl  GameTigerButtonReset.stl  GameTigerButtonSelect.stl  GameTigerButtonStart.stl  GameTigerCase.blend  GameTigerCase.blend1  GameTigerCase.stl  GameTigerCaseBack.stl  GameTigerCaseFront.stl
PCB/: B3FS-4052P--3DModel-STEP-273799.STEP
PCB/144187057-53-b3fs-4052p/: b3fs-4052p.mtl
PCB/3d Models/: 1-1734839-5.stp  TC33X-2-103E.STEP  W25Q128JVSIQ.STEP
PCB/503398-1892/: 503398-1892.kicad_sym  503398-1892.step  MOLEX_503398-1892.kicad_mod
PCB/AP2112K-3-3TRG1/KiCADv6/: 2023-08-20_05-46-15.kicad_sym
PCB/AP2112K-3-3TRG1/KiCADv6/footprints.pretty/: SOT_RG1_DIO-L.kicad_mod  SOT_RG1_DIO-M.kicad_mod  SOT_RG1_DIO.kicad_mod
PCB/GT-USB-7010ASV/: GT-USB-7010ASV.blend  OBJ_NEW_PCB.mtl
PCB/GameTiger/: GameTiger-eagle-import.bak  GameTiger-eagle-import.kicad_sym  GameTiger.csv  GameTiger.kicad_pcb  GameTiger.kicad_prl  GameTiger.kicad_pro  GameTiger.kicad_sch  GameTiger.xml  fp-info-cache  sym-lib-table  ~GameTiger.kicad_sch.lck
PCB/MAX98357AETE_T/: MAX98357AETE_T.kicad_sym  MAX98357AETE_T.step  QFN50P300X300X80-17N.kicad_mod
PCB/MK-12C02-G020/: MK-12C02-G020.stp
PCB/PAM8302A/: PAM8302A.kicad_mod  PAM8302A.kicad_sym
PCB/PCF8574TS/: PCF8574TS.kicad_sym  SOP65P640X150-20N.kicad_mod
PCB/PCF8575/: pcf8575dbr.kicad_mod  pcf8575dbr.kicad_sym
components/: battery.py  keyboard.py  pydisplay.py  wsdisplay.py
content/: about.h  allGameAlphaSprite.h  allGameSprite.h  alphanumfont.h  font.cpp  font.h  font2.cpp  font2.h  g2048.h  gameover.h  logoSprite.h  menuSprite.h  mine.h  modelSprite.h  models.h  ninjafrog.h  pa2bg.h  pa2fruits.h  pa2levels.h  pa2terrain.h  settings.h  snake.h  sweeper.h  tetris.h  tiger.h  ttt.h  tttblocks.h
content/3dmodel/: genmodels.py
content/image_util/: alphanumfont.h  crop.py  font2.h  gameover.h  image-convert.py  ninjafrogSprite.h  pa2bg.h  pa2fruits.h  sprite.py
content/image_util/Fruits/: crop.py
content/leveldata/: GameItems.tsx  NinjaFrog.tiled-project  NinjaFrog.tiled-session  Terrain.tsx  genlevels.py  level01.tmx  level02.tmx
core/: SX126x.cpp  SX126x.h  audio.cpp  audio.h  battery.cpp  battery.h  color.h  common.cpp  common.h  display.cpp  display.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  intmath.cpp  intmath.h  keyboard.cpp  keyboard.h  level.cpp  level.h  lora.cpp  lora.h  scene.cpp  scene.h  screen.h  tilemap.cpp  tilemap.h
core/LoRa/: LoRa.ino  lora.cpp  lora.h  sx126x.cpp  sx126x_hal.cpp  sx126x_hal.h
core/Peanut-GB/: peanut_gb.h
core/sx126x_driver/src/: sx126x_hal.h  sx126x_rp2040_hal.cpp
docs/: dev_guide.md
docs/PCB/gametiger/: gametiger.kicad_prl  gametiger.kicad_pro
docs/gametiger/: fp-info-cache  gametiger.kicad_prl  gametiger.kicad_pro  gametiger.kicad_sch
logo/: image-convert.py
screens/: aboutscreen.cpp  aboutscreen.h  g2048screen.cpp  g2048screen.h  gameboyscreen.cpp  gameboyscreen.h  mariogb.h  menuscreen.cpp  menuscreen.h  minescreen.cpp  minescreen.h  pa2screen.cpp  pa2screen.h  settingsscreen.cpp  settingsscreen.h  snakescreen.cpp  snakescreen.h  splashscreen.cpp  splashscreen.h  tetrisgb.h  tetrisscreen.cpp  tetrisscreen.h  ticscreen.cpp  ticscreen.h
screens/gbgames/: demo.h  kirby.h  matrixrain.gb  metroid2.h  prince.h  tetris2.h
screens/pa2/: pa2level.h  pa2level01.h
snakegame/: snakegame.py
